Fixed the spacing a little bit on the projects index page.

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -336,13 +336,13 @@ footer
     font-size: 72px
     line-height: 72px
     text-align: center
-    margin: 60px 30px
+    margin: 60px 30px 30px
 
   .project-boxes
     display: block
     width: 1200px
     padding: 30px
-    margin: 30px auto
+    margin: 0px auto
     overflow: auto
 
     a, a:visited
